Fix confusion diplaying for code on Firefox.

--- a/source/style.css
+++ b/source/style.css
@@ -1320,8 +1320,8 @@ code {
 }
 pre code {
 	border:none;
-	display:block;
-	padding:0;
+	/* display: inline-block; */
+	/* padding:0; */
 }
 .highlight {
 	font-family:"Menlo","Meslo LG",monospace;
